# m2o-node-plugin

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: m2o_api.h
misc/: index.js  macos.build.sh  script.js
src/: main.cpp  node.cpp
